--- a/css/index.css
+++ b/css/index.css
@@ -3,3 +3,44 @@
 トップページ
 
 */
+
+.mmm-section{
+    padding-top:2rem;
+    padding-bottom:2rem;
+}
+
+.mmm-section section{
+}
+
+.mmm-section-title{
+    font-size:2rem;
+    font-weight:bold;
+    text-align:center;
+    line-height:1.2;
+    margin-bottom:1em;
+}
+
+.mmm-section-content{
+}
+
+.mmm-post--index{
+    border-bottom:1px solid lightgray;
+}
+
+.mmm-post--index .mmm-post-terms{
+}
+
+.mmm-post--index .mmm-post-title{
+}
+
+.mmm-post--index .mmm-post-date{
+}
+
+.mmm-post--index .mmm-post-image{
+}
+
+.mmm-post--index .mmm-post-image img{
+}
+
+.mmm-post--index .mmm-post-content{
+}
