--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ h1,h2,h3,h4,h5,h6{
   display:flex;
   flex-wrap:wrap;
   justify-content:space-between;
-  width:1080px;
+  max-width:1080px;
   margin:0 auto;
 }
 
