--- a/style.css
+++ b/style.css
@@ -34,18 +34,6 @@ body{
   color:#222222;
 }
 
-@media screen and (max-width:1080px){
-  body{
-    width:1080px;
-  }
-}
-
-@media screen and (max-width:768px){
-  body{
-    width:100%;
-  }
-}
-
 @media all and (-ms-high-contrast:none){
 	body {
     font-family: "メイリオ", "游ゴシック Medium", "Yu Gothic Medium", "游ゴシック体", "YuGothic", "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "Meiryo", "verdana", sans-serif;
@@ -80,11 +68,9 @@ h1,h2,h3,h4,h5,h6{
 }
 
 .mmm-header{
-  margin-bottom:1rem;
 }
 
 .mmm-footer{
-  background-color:lightgray;
 }
 
 .mmm-footer-copyright{
@@ -148,8 +134,6 @@ h1,h2,h3,h4,h5,h6{
   font-size:3rem;
   font-weight:bold;
   text-align:center;
-  margin-top:1em;
-  margin-bottom:1em;
 }
 
 .mmm-page-title{
@@ -272,10 +256,14 @@ a.mmm-post-tag:hover{
 .mmm-breadcrumb ul li a{
   text-decoration:underline;
   line-height:1.2;
+  margin-left:1px;
+  margin-right:1px;
 }
 
 .mmm-breadcrumb ul span{
   line-height:1.2;
+  margin-left:1px;
+  margin-right:1px;
 }
 
 /*
@@ -606,8 +594,6 @@ a.mmm-post-tag:hover{
 .mmm-footer-menus{
   display:flex;
   justify-content:center;
-  padding-top:3rem;
-  padding-bottom:3rem;
 }
 
 .mmm-footer-menu{
