--- a/css/archive.css
+++ b/css/archive.css
@@ -5,7 +5,6 @@
 */
 
 .mmm-post--archive{
-    margin-bottom:1.5rem;
 }
 
 .mmm-post--archive .mmm-post-terms{
@@ -28,3 +27,95 @@
 
 .mmm-post--archive .mmm-post-content{
 }
+
+
+/* 
+
+ページネーション
+
+*/
+
+.mmm-pagination-archive{
+    margin:1rem 0;
+}
+  
+.mmm-pagination-archive ul{
+    width:100%;
+    display:flex;
+    justify-content:center;
+}
+  
+.mmm-pagination-archive ul li{
+    margin-right:5px;
+    margin-left:5px;
+}
+  
+.mmm-pagination-archive ul li.dots{
+    margin-left:0;
+    margin-right:0;
+}
+  
+.mmm-pagination-archive ul li a,
+.mmm-pagination-archive ul li span{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    height:40px;
+    width:40px;
+    font-weight:bold;
+    border-width:1px;
+    border-style:solid;
+}
+  
+.mmm-pagination-archive ul li a{
+    color:#FFF;
+    border-color:lightgray;
+    background-color:lightgray;
+}
+  
+.mmm-pagination-archive ul li span{
+    color:lightgray;
+    border-color:lightgray;
+    background-color:#FFF;
+}
+  
+ .mmm-pagination-archive ul li.dots span{
+    border-color:transparent;
+}
+  
+.mmm-pagination-archive ul li a:hover{
+    color:lightgray;
+    background-color:#FFF;
+}
+  
+.mmm-pagination-archive ul li.prev a,
+.mmm-pagination-archive ul li.prev span,
+.mmm-pagination-archive ul li.next a,
+.mmm-pagination-archive ul li.next span{
+    width:auto;
+    padding:0 1em;
+}
+
+@media screen and (max-width:992px){
+  
+    .mmm-pagination-archive ul li{
+      display:none;
+    }
+  
+    .mmm-pagination-archive ul li.next,
+    .mmm-pagination-archive ul li.prev{
+      display: initial;
+    }
+  
+    .mmm-pagination-archive ul li.prev{
+      margin-right:auto;
+      margin-left:0;
+    }
+  
+    .mmm-pagination-archive ul li.next{
+      margin-left:auto;
+      margin-right:0;
+    }
+  
+}
+
